tests/cases/standard-library/errors/string/std-string-literal-array-length.ari
fn main() -> i64 {
  let wrong: [u8, 2] = "ari";
  return wrong[0] as i64;
}
